[package]
name = "toml_edit"
version = "0.2.1"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["toml"]
categories = ["encoding", "parser-implementations", "parsing"]
description = "Yet another format-preserving TOML parser."
authors = ["Andronik Ordian <write@reusable.software>", "Ed Page <eopage@gmail.com>"]
repository = "https://github.com/ordian/toml_edit"
documentation = "https://docs.rs/toml_edit"
edition = "2018"

[package.metadata.docs.rs]
features = ["easy"]

[features]
default = []
easy = ["serde"]

[dependencies]
linked-hash-map = "0.5.2"
combine = "4.5.2"
vec1 = "1"
itertools = "0.10"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0.44"
pretty_assertions = "0.7.1"
toml-test-harness = "0.3"
criterion = "0.3"
toml = "0.5"

[[test]]
name = "decoder_compliance"
harness = false

[[test]]
name = "encoder_compliance"
harness = false

[[bench]]
name = "cargo"
harness = false

[[bench]]
name = "linear"
harness = false

[profile.dev]
opt-level = 1
