[package]
name = "toml_edit"
version = "0.13.4"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["toml"]
categories = ["encoding", "parser-implementations", "parsing"]
description = "Yet another format-preserving TOML parser."
authors = ["Andronik Ordian <write@reusable.software>", "Ed Page <eopage@gmail.com>"]
repository = "https://github.com/ordian/toml_edit"
documentation = "https://docs.rs/toml_edit"
edition = "2018"
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "examples/**/*",
  "benches/**/*",
  "tests/**/*"
]

[package.metadata.docs.rs]
features = ["easy"]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/ordian/toml_edit/compare/{{tag_name}}...HEAD", exactly=1},
]

[features]
default = []
easy = ["serde"]

[dependencies]
indexmap = "1.7"
combine = "4.6.3"
itertools = "0.10"
serde = { version = "1", features = ["derive"], optional = true }
kstring = { version = "1", features = ["max_inline"] }

[dev-dependencies]
serde_json = "1.0.44"
pretty_assertions = "1.0.0"
toml-test-harness = "0.3"
fs_snapshot = "0.1.1"
criterion = "0.3"
toml = "0.5"

[[test]]
name = "decoder_compliance"
harness = false

[[test]]
name = "encoder_compliance"
harness = false

[[test]]
name = "easy_decoder_compliance"
harness = false

[[test]]
name = "easy_encoder_compliance"
harness = false

[[test]]
name = "test_invalid"
harness = false

[[bench]]
name = "cargo"
harness = false

[[bench]]
name = "linear"
harness = false

[[example]]
name = "visit"
test = true

[profile.release]
debug = 1

[profile.dev]
opt-level = 1
