[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
homepage = "https://github.com/toml-rs/toml"
repository = "https://github.com/toml-rs/toml"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.66.0"  # MSRV
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*",
  "tests/**/*"
]

[profile.release]
debug = 1

[profile.dev]
opt-level = 1
