[package]
name = "toml_benchmarks"
version = "0.0.0"
publish = false
edition.workspace = true
rust-version.workspace = true

[package.metadata.release]
release = false

[features]
default = []
simd = ["toml_parse/simd"]

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

[dev-dependencies]
toml = { path = "../toml" }
toml_parse = { path = "../toml_parse" }
toml_edit = { path = "../toml_edit" }
toml_old = { version = "0.5.10", package = "toml" }
serde_json = "1.0.116"
lexopt = "0.3.0"
divan = "0.1.14"

[[bench]]
name = "0-cargo"
harness = false

[[bench]]
name = "1-map"
harness = false

[[bench]]
name = "2-array"
harness = false

[lints]
workspace = true
