[package]
name = "toml_benchmarks"
version = "0.0.0"
publish = false
edition.workspace = true
rust-version.workspace = true

[package.metadata.release]
release = false

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

[dev-dependencies]
toml = { path = "../toml" }
toml_edit = { path = "../toml_edit" }
toml_old = { version = "0.8.0", package = "toml" }
serde_json = "1.0.116"
lexopt = "0.3.0"
divan = "0.1.14"

[[bench]]
name = "cargo"
harness = false

[[bench]]
name = "linear"
harness = false

[lints]
workspace = true
