[package]
name = "toml_benchmarks"
version = "0.0.0"
publish = false
edition.workspace = true
rust-version.workspace = true

[package.metadata.release]
release = false

[features]
default = []
simd = ["toml_parser/simd"]
unsafe = ["toml_parser/unsafe"]
preserve_order = ["serde_json/preserve_order", "toml_old/preserve_order", "toml/preserve_order"]
fast_hash = ["toml/fast_hash"]

[dependencies]
serde = { version = "1.0.225", features = ["derive"] }

[dev-dependencies]
toml = { path = "../toml" }
toml_parser = { path = "../toml_parser" }
toml_edit = { path = "../toml_edit", features = ["serde"] }
toml_old = { version = "0.5.11", package = "toml" }
serde_json = "1.0.145"
lexopt = "0.3.1"
divan = "0.1.16"
serde_spanned = { path = "../serde_spanned" }

[[bench]]
name = "0-cargo"
harness = false

[[bench]]
name = "1-map"
harness = false

[[bench]]
name = "2-array"
harness = false

[lints]
workspace = true
