[package]
name = "serde_toml"
version = "0.0.1"
description = "See instead `toml`"
categories = ["encoding", "parser-implementations", "parsing", "config"]
keywords = ["encoding", "toml"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[package.metadata.release]
release = false

[lints]
workspace = true
