[package]
name = "toml_test_suite"
version = "0.0.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
publish = false
edition = "2021"
rust-version = "1.60.0"  # MSRV

[[bench]]
name = "linear"
harness = false

[dev-dependencies]
criterion = "0.4.0"
toml = { path = "../toml" }
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.152"
serde_json = "1.0.91"
toml-test-harness = "0.4.2"

[[test]]
name = "decoder_compliance"
harness = false

[[test]]
name = "encoder_compliance"
harness = false
