[package]
name = "toml_edit_fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { git = "https://github.com/rust-fuzz/libfuzzer-sys.git" }
toml_edit = { path = "../toml_edit" }

[[bin]]
name = "parse_document"
path = "parse_document.rs"
test = false
